# relay

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .gitleaks.toml  .mcp.json  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  SESSION_HANDOFF.md  TESTING.md  TOMORROW.md  docker-compose.dev.yml  drizzle.config.ts  install.sh  install.test.sh  package-lock.json  package.json  prpm.json  railway.json  run-dashboard.js  tsconfig.json  turbo.json  vitest.config.ts
.beads/: .gitignore  beads.jsonl  issues.jsonl  phase6-execution-plan.md
.trajectories/: consolidate-settings-panel.md  gh-cli-user-token.md  github-auth-recurring-issue.md  index.json
deploy/: .env.cloud.example  init-db.sql
docs/: .mintlifyignore  AGENTS.md  CHANNELS_V1_BEADS_TASKS.md  CLOUD-ARCHITECTURE.md  CLOUD-ONBOARDING-DESIGN.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CURSOR_ANALYSIS_TASKS.md  DASHBOARD-EXTRACTION-PLAN.md  DESIGN_V2.md  ENTERPRISE-FEATURES-ROADMAP.md  EXAMPLES.md  GIT_PUSH_WORKAROUND.md  IMPLEMENTATION-conductor-decoupling.md  INTEGRATION-GUIDE.md  MCP-SERVER.md  MULTI_SERVER_ARCHITECTURE.md  PHASE1-DECISION-TRAIL.md  PROPOSAL-trajectories.md  PROTOCOL.md  PROTOCOL_HARDENING.md  (+21 more)
relay-pty/: Cargo.toml  README.md
relay-pty/.trajectories/: index.json
relay-pty/.trajectories/completed/2026-02/: traj_1gcau1cajwm9.json  traj_1gcau1cajwm9.md
relay-pty/src/: inject.rs  main.rs  outbox_monitor.rs  parser.rs  protocol.rs  pty.rs  queue.rs  socket.rs
relay-pty/tests/: relay_pty_integration.rs
(+765 files in other folders)
