[package]
name = "relay-pty"
version = "0.1.0"
edition = "2021"
description = "PTY wrapper for reliable agent message injection"
license = "Apache-2.0"
authors = ["Agent Workforce"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Unix/POSIX APIs
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Regex for pattern matching
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
